
(executables
  (names main_js editor_js)
	(libraries lwt potion_pandora js_of_ocaml-lwt bigstringaf)
  (preprocess (pps lwt_ppx js_of_ocaml-ppx))
  (flags (:standard -warn-error -A))
  (js_of_ocaml
    (flags (:standard --target-env browser)))
  (wasm_of_ocaml
    (flags :standard --effects cps --pretty --debug-info) ; --target-env browser --source-map)
    (sourcemap inline)
    (compilation_mode whole_program))
  (modes wasm))

