
(executable
	(public_name potion-pandora)
  (name main_sdl)
  (modules main_sdl interface_sdl)
  (libraries potion_pandora sdl2 imagelib)
  (flags (:standard -warn-error -A -cclib -lSDL2-2.0))
	(modes native))

(executable
	(public_name potion-pandora-editor)
  (name editor_sdl)
  (modules editor_sdl interface_sdl)
  (libraries potion_pandora sdl2 imagelib)
  (flags (:standard -warn-error -A -cclib -lSDL2-2.0))
	(modes native))

