
(library
 	(public_name potion-pandora)
	(name potion_pandora)
	(libraries lwt tyxml imagelib)
	(preprocess
    (pps
      ppx_inline_test
      lwt_ppx
      tyxml-ppx
      ppx_deriving.enum))
	(modules_without_implementation
  )
  (inline_tests))

(rule
	(targets images_coords.ml all.png)
  (deps (:gen ../gen/bundle_png.exe) (glob_files ../images/*))
	(action (with-stdout-to images_coords.ml (run %{gen}))))

(rule
	(target all_image.ml)
  (deps (:gen ../gen/incl_png.exe) all.png)
	(action (with-stdout-to %{target} (run %{gen}))))

