
(library
 	(public_name potion-pandora)
	(name potion_pandora)
	(libraries lwt tyxml imagelib save)
	(preprocess
    (pps
      ppx_inline_test
      lwt_ppx
      tyxml-ppx
      ppx_deriving.enum
      ppx_deriving.show))
	(modules_without_implementation
    interface)
  (inline_tests)
  (flags (:standard -warn-error -A -g)))

(rule
	(targets images_coords.ml all.png)
  (deps (:gen ../gen/bundle_png.exe) (glob_files ../images/*))
	(action (with-stdout-to images_coords.ml (run %{gen}))))

(rule
	(target bundled_image.ml)
  (deps (:gen ../gen/incl_png.exe) all.png)
	(action (with-stdout-to %{target} (run %{gen}))))

