
(library
 	(public_name potion-pandora)
	(name potion_pandora)
	(libraries imagelib potion-pandora.libsave)
	(preprocess
    (pps
      ppx_inline_test
      ppx_deriving.enum
      ppx_deriving.show
      potion-pandora.ppx_data))
  ; LATER: (preprocessor_deps (glob_files ../images/*))
  (preprocessor_deps all.png)
	(modules_without_implementation
    interface)
  (inline_tests)
  (flags (:standard -warn-error -A -g)))

(rule
	(targets images_coords.ml all.png)
  (deps (:gen ../gen/bundle_png.exe) (glob_files ../images/*))
	(action (with-stdout-to images_coords.ml (run %{gen}))))

(rule
	(target bundled_image.ml)
  (deps (:gen ../gen/incl_png.exe) all.png)
	(action (with-stdout-to %{target} (run %{gen}))))

